--- a/Movies/app/src/main/res/values/strings.xml
+++ b/Movies/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Movies</string>
+    <string name="enter_movie_name">Enter the movie name</string>
 </resources>
