1. Movie detail UI added 2. Expandable list view for genre and production companies added

--- a/Movies/app/src/main/res/values/strings.xml
+++ b/Movies/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="enter_movie_name">Enter the movie name</string>
     <string name="getting_movie_list">Please wait....</string>
     <string name="movie_detail_activity">Movie Detail Activity</string>
+    <string name="expandable_list_header_genre">Genre</string>
+    <string name="expandable_list_header_prod_companies">Production Companies</string>
+    <string name="not_available">NA</string>
 </resources>
