--- a/FirebaseTesting/app/src/main/res/values/strings.xml
+++ b/FirebaseTesting/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_login">Sign in</string>
     <string name="add_item">Add New Item</string>
     <string name="action_logout">Logout</string>
+    <string name="enter_the_todo_text_here">Enter the Todo text here :</string>
 </resources>
