1. Activity for train between stations added

--- a/IndianRail/app/src/main/res/values/strings.xml
+++ b/IndianRail/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Indian Rail</string>
     <string name="train_number">Train Number</string>
     <string name="search">Search</string>
+    <string name="source_station">Source Station</string>
+    <string name="destination_station">Destination Station</string>
 </resources>
