--- a/QuizApp/app/src/main/res/values/strings.xml
+++ b/QuizApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="number_question">Enter number of questions</string>
+    <string name="select_category">Select Category</string>
+    <string name="select_difficulty">Select Difficulty</string>
+    <string name="select_type">Select Type</string>
 </resources>
