--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="edit_profile">Edit Profile</string>
     <string name="sign_out">Sign Out</string>
+    <string name="firebase_user_node">user</string>
+    <string name="firebase_user_account_settings_node">user_account_settings</string>
 </resources>
