--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="sign_out">Sign Out</string>
     <string name="firebase_user_node">user</string>
     <string name="firebase_user_account_settings_node">user_account_settings</string>
+    <string name="no_network">No network connectivity</string>
 </resources>
