1. User name change functionality implemented 2. Crash fixes

--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
 
     <string name="calling_activity">calling_activity</string>
     <string name="profile_activity">profile_activity</string>
+    <string name="field_username">username</string>
 
 </resources>
