--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="profile_activity">profile_activity</string>
     <string name="field_username">username</string>
 
+    <!-- Dialog names-->
+    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
+
 </resources>
