1. Update email implemented. 2. User will sign out and has to verify his new email again for login

--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="calling_activity">calling_activity</string>
     <string name="profile_activity">profile_activity</string>
     <string name="field_username">username</string>
+    <string name="field_email">email</string>
 
     <!-- Dialog names-->
     <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
