1. Gallary fragment and Photo fragment layout and java classes added. 2. view pager setup for fragments in Share Activity

--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="field_description">description</string>
     <string name="field_phone_number">phone_number</string>
 
-
+    <string name="gallary">GALLARY</string>
+    <string name="photo">PHOTO</string>
+    <string name="open_camera">Open Camera</string>
 
 </resources>
