--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="gallary">GALLARY</string>
     <string name="photo">PHOTO</string>
     <string name="open_camera">Open Camera</string>
+    <string name="next">Next</string>
 
 </resources>
