imageURL passed to next image via intent

--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="open_camera">Open Camera</string>
     <string name="next">Next</string>
 
+    <!--Intent extras names-->
+    <string name="selected_image">selected_image</string>
+
 </resources>
