Update : Next screen UI done

--- a/Instagramclone/app/src/main/res/values/strings.xml
+++ b/Instagramclone/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
 
     <!--Intent extras names-->
     <string name="selected_image">selected_image</string>
+    <string name="share">Share</string>
 
 </resources>
